# aoc-2024

./: .clang-tidy  CMakeLists.txt
input/: day3.txt
src/: CMakeLists.txt
src/aoc/: Main.cpp
src/aoc/days/: Day.hpp  Day1.cpp  Day1.hpp  Day2.cpp  Day2.hpp  Day3.cpp  Day3.hpp  Day4.cpp  Day4.hpp  Day5.cpp  Day5.hpp
src/aoc/input/: FileReader.cpp  FileReader.hpp
tests/: CMakeLists.txt
tests/input/: test1-day5.txt
tests/src/: Day4.cpp  Day5.cpp
